# verified-caps

./: .gitignore  Cargo.toml
scripts/: scripts.cabal  sloc.hs
scripts/graph/: graph.json  graph.py
scripts/measure/: calculate-averages.sh  functions  measure-complete.sh  measure-individual.sh  measure-times.sh  modules.txt
scripts/sloc/: Sloc.hs  scripts.cabal
src/: bin_tree.rs  cell_map.rs  heap.rs  insert_view.rs  lemmas.rs  linear.rs  machina.rs  main.rs  map.rs  meta.rs  nullable.rs  ptr_map.rs  revoke_view.rs  specs.rs  state.rs  tables.rs  tcb.rs  traits.rs  treap.rs  view.rs
src/lemmas/: common.rs  insert_view.rs  revoke_view.rs
src/specs/: cap_map.rs  link_map.rs
src/tables/: cell_map.rs
