[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = "=0.0.0-2025-08-12-1837"
verus_builtin_macros = "=0.0.0-2025-08-12-1837"
verus_state_machines_macros = "=0.0.0-2025-08-12-1837"

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(verus_keep_ghost)',
    'cfg(verus_keep_ghost_body)',
] }
