cabal-version:       >=1.10

name:                sloc
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:              Matthias Meissner
maintainer:          geige.matze@gmail.com
-- copyright:
-- category:
build-type:          Simple

executable sloc
  main-is:             Sloc.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       parsec, base >=4.14 && <4.15
  -- hs-source-dirs:
  default-language:    Haskell2010
